--- a/themes/simple/layouts/_default/notes.html
+++ b/themes/simple/layouts/_default/notes.html
@@ -13,7 +13,7 @@
 
   <hr class="border-2 border-gray-100 mb-8">
 
-  <select id="jump-to-note" class="px-3 py-2 rounded mb-2">
+  <select id="jump-to-note" class="px-3 py-2 rounded mb-2 bg-gray-100 w-full md:w-auto">
     <option>Jump to note</option>
   </select>
 
