--- a/themes/simple/layouts/partials/footer.html
+++ b/themes/simple/layouts/partials/footer.html
@@ -3,10 +3,10 @@
   <p class="pb-16">
     This website does not track you.
     Content is made available under the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
-      rel="noreferrer" class="underline-offset-2 decoration-1 decoration-wavy underline hover:text-gray-800">CC BY 4.0
+      rel="noreferrer" class="underline-offset-2 underline hover:text-gray-800">CC BY 4.0
       license</a> unless specified otherwise.
     Blog feed is available as <a href="/index.xml" target="_blank"
-      class="underline-offset-2 decoration-1 decoration-wavy underline hover:text-gray-800">RSS feed</a>.
+      class="underline-offset-2 underline hover:text-gray-800">RSS feed</a>.
   </p>
 </footer>
 
