--- a/themes/simple/static/css/tailwind.css
+++ b/themes/simple/static/css/tailwind.css
@@ -46,7 +46,7 @@ article.single p {
 
 /* Links */
 article.single a {
-  @apply underline-offset-2 decoration-1 decoration-wavy underline hover:bg-yellow-100;
+  @apply underline-offset-2 underline hover:bg-yellow-100;
 }
 
 /* Blockquote */
