Github Actions note and better rendering of images

--- a/themes/simple/layouts/_default/single.html
+++ b/themes/simple/layouts/_default/single.html
@@ -28,13 +28,13 @@
   {{ end }}
 
   <!-- Comment, contact -->
-  {{ if in .Type "posts" }}
+  {{ if not (eq .Type "pages") }}
   <section class="mb-10">
     {{ partial "comments.html" . }}
   </section>
   {{ end }}
 
-  {{ if in .Type "posts" }}
+  {{ if not (eq .Type "pages") }}
   <hr class="border-2 border-gray-100 mb-10" />
   {{ end }}
 
