--- a/themes/simple/layouts/partials/comments.html
+++ b/themes/simple/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 <section class="comments">
-  <h2 class="text-xl font-bold mb-2">Want to comment or have you something to add?</h2>
+  <h2 class="text-xl font-bold mb-2">Want to comment or have something to add?</h2>
 
   <p class="mb-10">
     You can write me an email at
