--- a/themes/simple/layouts/tags/list.html
+++ b/themes/simple/layouts/tags/list.html
@@ -31,7 +31,7 @@
       {{ range .Pages }}
       <div class="mb-10">
         <article class="mb-5 single note" itemscope itemtype="http://schema.org/Article">
-          <a href="{{ .Params.url }}">
+          <a href="/{{ .Params.url }}">
             <h2 class="text-xl font-medium notes-heading">{{.Title}}</h2>
           </a>
           <p class="text-gray-600 _italic text-sm flex flex-col md:flex-row gap-1">
@@ -45,7 +45,7 @@
               <span class="inline-flex flex-row gap-1">
                 <span>(</span>
                 {{ range .Params.tags }}
-                  <span>{{ . }}</span>
+                <a href="/tags/{{ . | urlize }}.html">{{ . }}</a>
                 {{ end }}
                 <span>)</span>
               </span>
