Massive formatting and added figcaption

--- a/themes/simple/layouts/_default/_markup/render-image.html
+++ b/themes/simple/layouts/_default/_markup/render-image.html
@@ -5,6 +5,7 @@
     <img
       loading="lazy"
       src="{{ .Destination }}?v={{ $cachebuster }}"
-      alt="{{ .Text }}" title="{{ .Text }}"> 
+      alt="{{ .Text }}" title="{{ .Text }}">
   </a>
+  <figcaption>{{ .Text }}</figcaption>
 </figure>
