Added my public GPG key into navigation

--- a/themes/simple/layouts/partials/navigation.html
+++ b/themes/simple/layouts/partials/navigation.html
@@ -10,7 +10,8 @@
       <a href="/notes.html" class="font-medium px-2 hover:bg-yellow-100">Notes</a>
       <a href="https://telegram.me/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Telegram</a>
       <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Git</a>
-      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Files</a>
+      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100 hidden md:block">Files</a>
+      <a href="/mitjafelicijan.gpg.pub.txt" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">GPG</a>
       <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-100">CV</a>
       <a href="/index.xml" itemprop="url" class="font-medium px-2 hover:bg-yellow-100 hidden md:block">RSS</a>
     </nav>
