--- a/themes/simple/layouts/_default/notes.html
+++ b/themes/simple/layouts/_default/notes.html
@@ -1,12 +1,15 @@
 {{ define "main" }}
 <main role="main" class="container-blog mx-auto px-6 md:p-0">
 
+  <!-- Search modal and results -->
+  {{ partial "search.html" . }}
+
   <section class="mb-6">
     <h1 class="text-2xl font-bold mb-2">Notes, notes and notes</h1>
     <p class="text-gray-600 italic">
       Notes about things I learn, things I do, things I want to remember,
       but never do. You can subscribe to this
-      <a href="/notes.xml" class="underline hover:bg-yellow-100">RSS feed</a>
+      <a href="/notes/index.xml" class="underline hover:bg-yellow-100">RSS feed</a>
       which contains only the notes without the blog posts.
     </p>
   </section>
