--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -11,7 +11,7 @@
     </svg>
     <p>For interesting <span span class="italic font-medium">notes</span> and
     small <span class="italic font-medium">experiments</span> I usually partake
-    in, check the Notes page.</p>
+    in, check the <span class="font-medium">Notes page</span>.</p>
   </a>
 
   <h1 class="text-2xl font-bold mb-6">Blog posts</h1>
