--- a/themes/simple/layouts/partials/comments.html
+++ b/themes/simple/layouts/partials/comments.html
@@ -3,7 +3,7 @@
 
   <p class="mb-10">
     You can write me an email at
-    <a href="mailto:m@mitjafelicijan.com" class="underline-offset-2 underline hover:bg-yellow-100">m@mitjafelicijan.com</a> or catch up with me
-    <a href="https://telegram.me/mitjafelicijan" target="_blank" class="underline-offset-2 underline hover:bg-yellow-100">on Telegram</a>.
+    <a href="mailto:m@mitjafelicijan.com" class="underline-offset-2 underline">m@mitjafelicijan.com</a> or catch up with me
+    <a href="https://telegram.me/mitjafelicijan" target="_blank" class="underline-offset-2 underline">on Telegram</a>.
   </p>
 </section>
