--- a/themes/simple/layouts/partials/navigation.html
+++ b/themes/simple/layouts/partials/navigation.html
@@ -1,7 +1,7 @@
 <div class="container-blog mx-auto px-6 md:p-0">
   <header class="flex py-4 mt-4 mb-8 flex-col md:flex-row items-center ">
     <div class="flex-grow mb-2 md:mb-0">
-      <a href="/" itemprop="url" class="text-xl font-semibold hover:bg-yellow-100">Mitja Felicijan</a>
+      <a href="/" itemprop="url" class="text-xl font-semibold hover:underline">Mitja Felicijan</a>
     </div>
 
     <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="flex items-center gap-1" role="toolbar">
@@ -17,13 +17,13 @@
         </span>
       </span>
 
-      <a href="/notes.html" class="font-medium px-2 hover:bg-yellow-100">Notes</a>
-      <a href="https://telegram.me/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Telegram</a>
-      <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">Git</a>
-      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-100 hidden md:block">Files</a>
-      <a href="/mitjafelicijan.gpg.pub.txt" itemprop="url" class="font-medium px-2 hover:bg-yellow-100">GPG</a>
-      <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-100">CV</a>
-      <a href="/index.xml" itemprop="url" class="font-medium px-2 hover:bg-yellow-100 hidden md:block">RSS</a>
+      <a href="/notes.html" class="font-medium px-2 hover:bg-yellow-200 rounded">Notes</a>
+      <a href="https://telegram.me/mitjafelicijan" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 rounded">Telegram</a>
+      <a href="https://git.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 rounded">Git</a>
+      <a href="https://files.mitjafelicijan.com" target="_blank" rel="noopener nofollow" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 rounded hidden md:block">Files</a>
+      <a href="/mitjafelicijan.gpg.pub.txt" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 rounded">GPG</a>
+      <a href="/curriculum-vitae.html" class="font-medium px-2 hover:bg-yellow-200 rounded">CV</a>
+      <a href="/index.xml" itemprop="url" class="font-medium px-2 hover:bg-yellow-200 rounded hidden md:block">RSS</a>
     </nav>
   </header>
 </div>
