--- a/themes/simple/layouts/tags/list.html
+++ b/themes/simple/layouts/tags/list.html
@@ -15,7 +15,7 @@
     <p class="text-gray-600 italic">
       Notes about things I learn, things I do, things I want to remember,
       but never do. You can subscribe to this
-      <a href="/notes.xml" class="underline hover:bg-yellow-100">RSS feed</a>
+      <a href="/notes.xml" class="underline">RSS feed</a>
       which contains only the notes without the blog posts.
     </p>
   </section>
