--- a/themes/simple/layouts/_default/list.html
+++ b/themes/simple/layouts/_default/list.html
@@ -22,8 +22,8 @@
     {{ range (where .Site.RegularPages "Section" "posts") }}
     <div>
       <article class="mb-5" itemscope itemtype="http://schema.org/Article">
-        <time class="block text-gray-400 font-medium text-xs">{{ .Date.Format "Monday Jan 2, 2006" }}</time>
-        <a href="/{{ .Params.url }}" itemprop="url" class="hover:bg-yellow-100" rel="bookmark noopener" aria-label="Opens URL">
+        <time class="block text-gray-400 font-medium text-xs mb-1">{{ .Date.Format "Monday Jan 2, 2006" }}</time>
+        <a href="/{{ .Params.url }}" itemprop="url" class="underline" rel="bookmark noopener" aria-label="Opens URL">
           {{ if .Params.draft }}
           <span class="bg-orange-600 text-white px-1.5">Draft</span>
           {{ end }}
