--- a/themes/simple/layouts/partials/read-more.html
+++ b/themes/simple/layouts/partials/read-more.html
@@ -2,15 +2,15 @@
   <h2 class="text-2xl font-bold mb-6">Read more from this site</h2>
   <nav itemscope itemtype="https://schema.org/SiteNavigationElement" class="mb-12">
     <meta itemprop="name" content="Article list">
-    <ul>
+    <nav class="flex flex-col gap-4">
       {{ $randomPosts := shuffle (where .Site.RegularPages "Type" "posts") | first 5 }}
       {{ range $randomPosts }}
-      <li class="mb-6">
+      <div>
         <time class="block text-gray-400 font-medium text-xs">{{ .Date.Format "Mon Jan 2, 2006" }}</time>
-        <a href="/{{ .Params.url }}" itemprop="url" class="hover:bg-yellow-100 font-medium">{{ .Title }}</a>
+        <a href="/{{ .Params.url }}" itemprop="url" class="block underline font-medium mb-1">{{ .Title }}</a>
         <p class="text-gray-600 text-sm">{{ .Summary }}</p>
-      </li>
+      </div>
       {{ end }}
-    </ul>
+    </nav>
   </nav>
 </section>
