--- a/themes/simple/layouts/partials/side-projects.html
+++ b/themes/simple/layouts/partials/side-projects.html
@@ -1,33 +1,40 @@
 <section class="mb-12">
-  <h2 class="text-2xl font-bold mb-6">Side projects I worked on</h2>
-  <ul class="list-disc ml-6">
-    <li>
-      <a href="https://git.mitjafelicijan.com/cord.h.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">cord.h - Small C library for handling strings</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/mprogress.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">mprogress - Tiny utility that displays progress bar in terminal</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">journalctl-proxy - Exposes your systemd logs to web via web interface</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">redis-marshal - Lightweight Redis data exploration tool</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">dna-encoding - Tools for encoding files to DNA sequence</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">vertex - Create mock API's and add basic logic to simplify prototyping</a>
-    </li>
-    <li>
-      <a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow"
-        class="hover:bg-yellow-100">scarecrow - Minimal configuration reverse proxy</a>
-    </li>
-  </ul>
+  <h2 class="text-2xl font-bold mb-6">Side projects I work/worked on</h2>
+
+  <nav class="flex flex-col gap-4 md:gap-0 md:border w-full mb-4">
+    <a href="https://git.mitjafelicijan.com/cord.h.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">cord.h</span>
+      <span>Small C library for handling strings</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/mprogress.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">mprogress</span>
+      <span>Tiny utility that displays progress bar in terminal</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/journalctl-proxy.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">journalctl-proxy</span>
+      <span>Exposes your systemd logs to web via web interface</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/redis-marshal.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">redis-marshal</span>
+      <span>Lightweight Redis data exploration tool</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/dna-encoding.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">dna-encoding</span>
+      <span>Tools for encoding files to DNA sequence</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/vertex.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200 md:border-b">
+      <span class="inline-block md:w-40 underline">vertex</span>
+      <span>Create mock API's and add basic logic to simplify prototyping</span>
+    </a>
+    <a href="https://git.mitjafelicijan.com/scarecrow.git/" target="_blank" rel="noopener nofollow" class="block md:p-3 hover:bg-yellow-200">
+      <span class="inline-block md:w-40 underline">scarecrow</span>
+      <span>Minimal configuration reverse proxy</span>
+    </a>
+  </nav>
+
+  <p class="text-gray-500 italic">* For more projects, check out
+  my <a href="https://git.mitjafelicijan.com/" class="underline">Git
+  server</a>. Most of the projects there are probably work in progress and
+  should be considered as such.</p>
+
 </section>
