Added small highlight to code elements

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,10 @@
           border-bottom: 1px solid black;
 	  }
 
+	  code {
+		  background: #f6f6f6;
+	  }
+
 	  pre code {
 		  line-height: 1.3em;
 	  }
