--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,10 @@
 		  margin-block-start: 3rem;
 	  }
 
+	  cap {
+		  text-transform: capitalize;
+	  }
+
 	  table {
           max-width: 100%;
           border-collapse: separate;
@@ -141,15 +145,16 @@
 
 	<footer>
 	  <hr>
-	  <p><big><strong>Want to comment or have something to add?</strong></big></p>
 	  <p>
-		You can write me an email at
+		<p><big><strong>Want to comment or have something to add?</strong></big></p>
+		<p>You can write me an email at
 		<a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or catch up
 		with me
-		<a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
+		<a href="https://telegram.me/mitjafelicijan" target="_blank">on
+		Telegram</a>.</p>
 	  </p>
 	  <hr>
-	  <p>This website does not track you. Content is made available under
+	  <p>This website does not track you.  Content is made available under
 		the <a href="https://creativecommons.org/licenses/by/4.0/"
 		target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
 		otherwise. Blog feed is available as <a href="/index.xml"
