--- a/templates/note.html
+++ b/templates/note.html
@@ -6,7 +6,7 @@
 {{ define "content" }}
 <div>
   <h1>{{ .Page.Title }}</h1>
-  <p>{{ .Page.Created.Format "Jan 2, 2006" }}</p>
+  <p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }}</p>
   <div>
 	{{ .Page.HTML }}
   </div>
