Gramatical fixes and footer gap change

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 		<th width="5"></th>
 		<th>Project name</th>
 		<th>What is being worked on?</th>
-		<th>Last updated</th>
+		<th>Last update</th>
 	  </tr>
 	</thead>
 	<tbody>
