Added new row to currently working on

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,12 @@
 	</thead>
 	<tbody>
 	  <tr>
+		<td class="pstatus-green" title="Kinda works"></td>
+		<td><a href="https://github.com/mitjafelicijan/i3blocks" target="_blank">i3blocks - Progress bars</a></td>
+		<td>Testing blocks: cpu, ram, disk and nvidia gpu.</td>
+		<td>12th of June, 2023</td>
+	  </tr>
+	  <tr>
 		<td class="pstatus-orange" title="Somewhat works"></td>
 		<td><a href="https://github.com/mitjafelicijan/errand" target="_blank">Errand - Task runner</a></td>
 		<td>Working on re-implementating the whole thing in C.</td>
