Cleanup of DOM in base

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,20 +145,20 @@
 
 	<footer>
 	  <hr>
+	  <p><big><strong>Want to comment or have something to add?</strong></big></p>
 	  <p>
-		<p><big><strong>Want to comment or have something to add?</strong></big></p>
-		<p>You can write me an email at
-		<a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or catch up
-		with me
-		<a href="https://telegram.me/mitjafelicijan" target="_blank">on
-		Telegram</a>.</p>
+		You can write me an email
+		at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or
+		catch up with me <a href="https://telegram.me/mitjafelicijan"
+		target="_blank">on Telegram</a>.
 	  </p>
 	  <hr>
 	  <p>This website does not track you.  Content is made available under
 		the <a href="https://creativecommons.org/licenses/by/4.0/"
 		target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
 		otherwise. Blog feed is available as <a href="/index.xml"
-		target="_blank">RSS feed</a>.</p>
+		target="_blank">RSS feed</a>.
+	  </p>
 	</footer>
 
 	<script src="https://cdn.usefathom.com/script.js" data-site="XHQARKXP" defer></script>
