--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 	</tbody>
   </table>
   
-  <h2><a name="posts"></a>More long form, blog type of content</h2>
+  <h2><a name="posts"></a>More long form, ramblings etc</h2>
   <ul>
 	{{ range .Pages }}
 	{{ if eq .Type "post" }}
