--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
           margin-block-start: 1.5rem;
           margin-block-end: 1.5rem;
           padding: 0.5rem 0;
-          border-top: 1px solid black;
-          border-bottom: 1px solid black;
+          border-top: 1px solid #aaa;
+          border-bottom: 1px solid #aaa;
 	  }
 
 	  code {
