Added new project to homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,12 @@
 	</thead>
 	<tbody>
 	  <tr>
+		<td class="pstatus-red" title="Still in initial stage"></td>
+		<td><a href="https://github.com/mitjafelicijan/moonshine" target="_blank">Moonshine - Lua distribution</a></td>
+		<td>Testing Alpine container, implementing first two rocks.</td>
+		<td>17th of June, 2023</td>
+	  </tr>
+	  <tr>
 		<td class="pstatus-green" title="Kinda works"></td>
 		<td><a href="https://github.com/mitjafelicijan/i3blocks" target="_blank">i3blocks - Progress bars</a></td>
 		<td>Testing blocks: cpu, ram, disk and nvidia gpu.</td>
