Added more online radios and added radio to navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,7 @@
 		<a href="/">Home</a>
 		<a href="https://git.mitjafelicijan.com/" target="_blank">Git</a>
 		<a href="https://files.mitjafelicijan.com/" target="_blank">Files</a>
+		<a href="/radio.pls" target="_blank">Radio</a>
 		<a href="/mitjafelicijan.pgp.pub.txt" target="_blank">PGP</a>
 		<a href="/curriculum-vitae.html">CV</a>
 		<a href="/index.xml" target="_blank">RSS</a>
