--- a/templates/index.html
+++ b/templates/index.html
@@ -29,31 +29,31 @@
 	<tbody>
 	  <tr>
 		<td class="pstatus-red" title="Still in initial stage"></td>
-		<td><a href="https://github.com/mitjafelicijan/moonshine" target="_blank">Moonshine - Lua distribution</a></td>
+		<td><a href="https://github.com/mitjafelicijan/moonshine" target="_blank">Moonshine</a></td>
 		<td>Testing Alpine container, implementing first two rocks.</td>
 		<td>17th of July, 2023</td>
 	  </tr>
 	  <tr>
 		<td class="pstatus-green" title="Kinda works"></td>
-		<td><a href="https://github.com/mitjafelicijan/i3blocks" target="_blank">i3blocks - Progress bars</a></td>
+		<td><a href="https://github.com/mitjafelicijan/i3blocks" target="_blank">i3blocks</a></td>
 		<td>Testing blocks: cpu, ram, disk and nvidia gpu.</td>
 		<td>12th of July, 2023</td>
 	  </tr>
 	  <tr>
 		<td class="pstatus-orange" title="Somewhat works"></td>
-		<td><a href="https://github.com/mitjafelicijan/errand" target="_blank">Errand - Task runner</a></td>
+		<td><a href="https://github.com/mitjafelicijan/errand" target="_blank">Errand</a></td>
 		<td>Working on re-implementating the whole thing in C.</td>
 		<td>7th of July, 2023</td>
 	  </tr>
 	  <tr>
 		<td class="pstatus-green" title="Kinda works"></td>
-		<td><a href="https://github.com/mitjafelicijan/jbmafp" target="_blank">JBMAFP - Generates static sites</a></td>
+		<td><a href="https://github.com/mitjafelicijan/jbmafp" target="_blank">JBMAFP</a></td>
 		<td>Fixing minor issues and writing docs.</td>
 		<td>8th of July, 2023</td>
 	  </tr>
 	  <tr>
 		<td class="pstatus-red" title="Still in initial stage"></td>
-		<td><a href="https://github.com/mitjafelicijan/marionette" target="_blank">Marionette - UI testing tool</a></td>
+		<td><a href="https://github.com/mitjafelicijan/marionette" target="_blank">Marionette</a></td>
 		<td>Implementing HTTP server for viewing reports.</td>
 		<td>6th of July, 2023</td>
 	  </tr>
@@ -61,7 +61,7 @@
   </table>
   
   <h2><a name="posts"></a>More long form, ramblings etc</h2>
-  <ul itemscope itemtype="https://schema.org/SiteNavigationElement">
+  <ul itemscope itemtype="https://schema.org/SiteNavigationElement" class="list">
 	<meta itemprop="name" content="Article list">
 	{{ range .Pages }}
 	{{ if eq .Type "post" }}
@@ -72,7 +72,7 @@
 
   <h2><a name="notes"></a>Notes?! Maybe useful</h2>
   <h2></h2>
-  <ul itemscope itemtype="https://schema.org/SiteNavigationElement">
+  <ul itemscope itemtype="https://schema.org/SiteNavigationElement" class="list">
 	<meta itemprop="name" content="Note list">
 	{{ range .Pages }}
 	{{ if eq .Type "note" }}
