Added on label for post and note

--- a/templates/note.html
+++ b/templates/note.html
@@ -6,7 +6,7 @@
 {{ define "content" }}
 <article itemtype="http://schema.org/Article">
   <h1 itemtype="headline">{{ .Page.Title }}</h1>
-  <p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }}</p>
+  <p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }} on <a href="{{ .Config.BaseURL }}">{{ .Config.Title }}'s blog</a></p>
   <div>
 	{{ .Page.HTML }}
   </div>
