Style: Code background color

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,11 +76,11 @@
           text-wrap: nowrap;
           overflow-x: auto;
 		  padding: 0 1em;
-		  background: whitesmoke;
+		  background: floralwhite;
 	  }
 
 	  code {
-		  background: #fff0e3;
+		  background: floralwhite;
 		  padding: 0 3px;
 		  font-size: 14px;
 	  }
