Post: Floods in Slovenia up close

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
 	  <p>This website does not track you.  Content is made available under
 		the <a href="https://creativecommons.org/licenses/by/4.0/"
 		target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
-		otherwise. Blog feed is available as <a href="/index.xml"
+		otherwise. Blog is also available as <a href="/index.xml"
 		target="_blank">RSS feed</a>.
 	  </p>
 	</footer>
