Cleanup of posts

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,19 @@
 		  font-family: monospace;
 	  }
 
+	  figure {
+		  margin-inline-start: 0;
+		  margin-inline-end: 0;
+	  }
+
+	  figcaption {
+		  text-align: center;
+	  }
+
+	  figcaption p {
+		  margin: 0.3em 0 0 0;
+	  }
+	  
 	  img, video, audio {
 		  max-width: 100%;
 	  }
@@ -167,14 +180,14 @@
 		You can write me an email
 		at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or
 		catch up with me <a href="https://telegram.me/mitjafelicijan"
-		target="_blank">on Telegram</a>.
+							target="_blank">on Telegram</a>.
 	  </p>
 	  <hr>
 	  <p>This website does not track you.  Content is made available under
 		the <a href="https://creativecommons.org/licenses/by/4.0/"
-		target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
+			   target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
 		otherwise. Blog is also available as <a href="/index.xml"
-		target="_blank">RSS feed</a>.
+												target="_blank">RSS feed</a>.
 	  </p>
 	</footer>
   </body>
