--- a/templates/base.html
+++ b/templates/base.html
@@ -173,21 +173,23 @@
       {{ block "content" . }}{{ end }}
     </main>
 
+	<section>
+	  <hr>
+	  {{ template "openring.html" }}
+	</section>
+
 	<footer>
 	  <hr>
 	  <p><big><strong>Want to comment or have something to add?</strong></big></p>
 	  <p>
 		You can write me an email
 		at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or
-		catch up with me <a href="https://telegram.me/mitjafelicijan"
-							target="_blank">on Telegram</a>.
+		catch up with me <a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
 	  </p>
 	  <hr>
 	  <p>This website does not track you.  Content is made available under
-		the <a href="https://creativecommons.org/licenses/by/4.0/"
-			   target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
-		otherwise. Blog is also available as <a href="/index.xml"
-												target="_blank">RSS feed</a>.
+		the <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noreferrer">CC BY 4.0 license</a> unless specified
+		otherwise. Blog is also available as <a href="/index.xml" target="_blank">RSS feed</a>.
 	  </p>
 	</footer>
   </body>
