--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 	<style>
 	  body {
           padding: 1rem;
-          max-width: 700px;
+          max-width: 760px;
           background: white;
 		  font-family: sans-serif;
           line-height: 1.35rem;
@@ -46,6 +46,7 @@
 
 	  table {
           max-width: 100%;
+		  width: 100%;
           border-collapse: separate;
           border-spacing: 2px;
           border: 1px solid black;
@@ -81,18 +82,17 @@
           text-wrap: nowrap;
           overflow-x: auto;
 		  padding: 0 1em;
-		  background: floralwhite;
+		  border: 1px solid gainsboro;
 	  }
 
 	  code {
-		  background: floralwhite;
 		  padding: 0 3px;
 		  font-size: 14px;
+		  border: 0;
 	  }
 
 	  pre code {
 		  line-height: 1.3em;
-		  background: initial;
 	  }
 
 	  pre, code, pre *, code * {
