Added Vercel analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -196,5 +196,10 @@
 		otherwise. Blog is also available as <a href="/index.xml" target="_blank">RSS feed</a>.
 	  </p>
 	</footer>
+
+	<script>
+	 window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+	</script>
+	<script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
