Changed default email to gmail one

--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
 	  <p><big><strong>Want to comment or have something to add?</strong></big></p>
 	  <p>
 		You can write me an email
-		at <a href="mailto:m@mitjafelicijan.com">m@mitjafelicijan.com</a> or
+		at <a href="mailto:mitja.felicijan@gmail.com">mitja.felicijan@gmail.com</a> or
 		catch up with me <a href="https://telegram.me/mitjafelicijan" target="_blank">on Telegram</a>.
 	  </p>
 	  <hr>
