--- a/templates/base.html
+++ b/templates/base.html
@@ -162,6 +162,7 @@
 	<header>
 	  <nav class="main" itemscope itemtype="http://schema.org/SiteNavigationElement" role="toolbar">
 		<a href="/">Home</a>
+		<a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
 		<a href="/vault.html">Vault</a>
 		<a href="/mitjafelicijan.pgp.pub.txt" target="_blank">PGP</a>
 		<a href="/curriculum-vitae.html">CV</a>
